force-app/main/default/objects/Support_Request__c/fields/Additional_Information_Description__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Description__c</fullName>
    <label>Additional Information/Description</label>
    <type>TextArea</type>
</CustomField>