force-app/main/default/objects/Support_Request__c/fields/Analysis_and_Findings__c.field-meta.xml
<CustomField>
    <fullName>Analysis_and_Findings__c</fullName>
    <label>Analysis and Findings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>