force-app/main/default/objects/Support_Request__c/fields/Business_Area_s_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Business_Area_s_Impacted__c</fullName>
    <label>Business Area (s) Impacted:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOFE</fullName>
            </value>
            <value>
                <fullName>Cashiering</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>PAGA</fullName>
            </value>
            <value>
                <fullName>WCA/Garment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>