force-app/main/default/objects/Support_Request__c/fields/Business_Liaison__c.field-meta.xml
<CustomField>
    <fullName>Business_Liaison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Team who is the main contact for the support request</description>
    <label>Business Liaison</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>