force-app/main/default/objects/Support_Request__c/fields/Closure_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Due_Date__c</fullName>
    <label>Closure Due Date</label>
    <type>Date</type>
</CustomField>