force-app/main/default/objects/Support_Request__c/fields/Closure_Due_Flag__c.field-meta.xml
<CustomField>
    <fullName>Closure_Due_Flag__c</fullName>
    <formula>If(DATEVALUE(Closing_Over_Due__c)  &gt; TODAY(), &quot;True&quot;, &quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closure Due Flag</label>
    <type>Text</type>
</CustomField>