force-app/main/default/objects/Support_Request__c/fields/Create_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Date/Time</label>
    <type>DateTime</type>
</CustomField>