force-app/main/default/objects/Support_Request__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <formula>CASE(Status__c , 
&#39;New&#39;, &#39;Pending&#39;,
&#39;Confirmed&#39;, &#39;Pending&#39;,
&#39;In Development&#39;, &#39;Pending&#39;,
&#39;In User Validation&#39;, &#39;Pending&#39;,
&#39;Waiting for User Response&#39;, &#39;Pending&#39;,
&#39;Added to a Project&#39;, &#39;Pending&#39;,
&#39;Added to a Release&#39;, &#39;Completed&#39;,
&#39;Ready for Stating&#39;, &#39;Completed&#39;,
&#39;Closed&#39;, &#39;Completed&#39;,
&#39;Merged to Deployment Package&#39;, &#39;Completed&#39;,
&#39;Accepted&#39;, &#39;Completed&#39;,
&#39;Duplicate/Canceled/Other&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status</label>
    <type>Text</type>
</CustomField>