force-app/main/default/objects/Support_Request__c/fields/Enhancement__c.field-meta.xml
<CustomField>
    <fullName>Enhancement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enhancement</label>
    <type>Checkbox</type>
</CustomField>