force-app/main/default/objects/Support_Request__c/fields/Estimated_Date_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date_of_Completion__c</fullName>
    <label>Estimated Date of Completion</label>
    <type>Date</type>
</CustomField>