force-app/main/default/objects/Support_Request__c/fields/Link_to_Change_Set__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Change_Set__c</fullName>
    <label>Link to Change Set/ Gearset Package Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>