force-app/main/default/objects/Support_Request__c/fields/Mark_as_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Mark_as_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark as Duplicate</label>
    <type>Checkbox</type>
</CustomField>