force-app/main/default/objects/Support_Request__c/fields/Method_of_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Deployment__c</fullName>
    <label>Method of Deployment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Set</fullName>
            </value>
            <value>
                <fullName>Gearset</fullName>
            </value>
            <value>
                <fullName>ANT</fullName>
            </value>
            <value>
                <fullName>N/A - Configuration Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>