force-app/main/default/objects/Support_Request__c/fields/Multi_Unit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Multi_Unit_Flag__c</fullName>
    <formula>CASE(Support_Request_For__c, 
&#39;BOFE&#39;,&#39;BOFE&#39;, 
&#39;WCA&#39;,&#39;WCA&#39;,
&#39;CASHIERING&#39;,&#39;CASHIERING&#39;,
&#39;PAGA&#39;,&#39;PAGA&#39;,
&#39;HR&#39;,&#39;HR&#39;,
&#39;OIS&#39;,&#39;OIS&#39;,
&#39;JEU&#39;,&#39;JEU&#39;,
&#39;REGISTRATION&#39;,&#39;REGISTRATION&#39;,
&#39;RCI&#39;,&#39;RCI&#39;,
&#39;ACCOUNTING&#39;,&#39;ACCOUNTING&#39;,
&#39;MULTI-UNIT/ACCOUNT REQUEST&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit</label>
    <type>Text</type>
</CustomField>