force-app/main/default/objects/Support_Request__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipName>Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>