force-app/main/default/objects/Support_Request__c/fields/Prior_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Prior_Status_Value__c</fullName>
    <label>Prior Status Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>