force-app/main/default/objects/Support_Request__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Projects__c</referenceTo>
    <relationshipName>Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>