force-app/main/default/objects/Support_Request__c/fields/Project_Iteration__c.field-meta.xml
<CustomField>
    <fullName>Project_Iteration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Iteration</label>
    <referenceTo>Project_Iteration__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>