force-app/main/default/objects/Support_Request__c/fields/Proposed_Change_Solution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Change_Solution__c</fullName>
    <label>Proposed Change/Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>