force-app/main/default/objects/Support_Request__c/fields/Readiness__c.field-meta.xml
<CustomField>
    <fullName>Readiness__c</fullName>
    <formula>IMAGE( 
CASE( Release_Activity_Status__c, 
&quot;New&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;In Progress&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Ready to Deploy&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Deployed&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;/s.gif&quot;),
&quot;Readiness Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Readiness</label>
    <type>Text</type>
</CustomField>