force-app/main/default/objects/Support_Request__c/fields/Ready_for_Closure__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Closure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Closure</label>
    <type>Checkbox</type>
</CustomField>