force-app/main/default/objects/Support_Request__c/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <description>When a status is changed, the Support Team will need to put the reason for rejection</description>
    <label>Reason for Rejection</label>
    <type>TextArea</type>
</CustomField>