force-app/main/default/objects/Support_Request__c/fields/Related_Support_Request_Link__c.field-meta.xml
<CustomField>
    <fullName>Related_Support_Request_Link__c</fullName>
    <description>This field is a link to the parent support request and is being used in the duplicate email notification.</description>
    <formula>&#39;https://cadir.my.salesforce.com/&#39; &amp; Support_Request__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Support Request Link</label>
    <type>Text</type>
</CustomField>