force-app/main/default/objects/Support_Request__c/fields/Release_Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>Release_Activity_Status__c</fullName>
    <label>Release Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ready to Deploy</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>SR Was Canceled</fullName>
            </value>
            <value>
                <fullName>N/A - Duplicate SR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>