force-app/main/default/objects/Support_Request__c/fields/Release_Notes__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes__c</fullName>
    <label>Release Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>