force-app/main/default/objects/Support_Request__c/fields/Release_Status__c.field-meta.xml
<CustomField>
    <fullName>Release_Status__c</fullName>
    <formula>TEXT(Add_to_a_Release__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Status</label>
    <type>Text</type>
</CustomField>