force-app/main/default/objects/Support_Request__c/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <label>Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>BOFE Auditor</fullName>
            </value>
            <value>
                <fullName>BOFE Auditor/Clerk</fullName>
            </value>
            <value>
                <fullName>BOFE Clerk</fullName>
            </value>
            <value>
                <fullName>BOFE Dep</fullName>
            </value>
            <value>
                <fullName>BOFE DLC II</fullName>
            </value>
            <value>
                <fullName>BOFE IRR</fullName>
            </value>
            <value>
                <fullName>BOFE MST</fullName>
            </value>
            <value>
                <fullName>BOFE RM</fullName>
            </value>
            <value>
                <fullName>BOFE Sr Dep</fullName>
            </value>
            <value>
                <fullName>Cashiering</fullName>
            </value>
            <value>
                <fullName>Cashiering Disbursing</fullName>
            </value>
            <value>
                <fullName>Cashiering Receipting</fullName>
            </value>
            <value>
                <fullName>Cashiering Sr</fullName>
            </value>
            <value>
                <fullName>CIU</fullName>
            </value>
            <value>
                <fullName>Counter</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>HR BOFE Restricted User</fullName>
            </value>
            <value>
                <fullName>HR Certification Unit</fullName>
            </value>
            <value>
                <fullName>HR Division User</fullName>
            </value>
            <value>
                <fullName>HR Personnel Analyst</fullName>
            </value>
            <value>
                <fullName>HR Personnel Specialist</fullName>
            </value>
            <value>
                <fullName>HR Position Control Administrator</fullName>
            </value>
            <value>
                <fullName>HR View Only</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
            <value>
                <fullName>JEU Disbursing</fullName>
            </value>
            <value>
                <fullName>JEU DLC II</fullName>
            </value>
            <value>
                <fullName>JEU Legal</fullName>
            </value>
            <value>
                <fullName>JEU Legal Support</fullName>
            </value>
            <value>
                <fullName>JEU Receipting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>