force-app/main/default/objects/Support_Request__c/fields/Situation_Description__c.field-meta.xml
<CustomField>
    <fullName>Situation_Description__c</fullName>
    <label>Situation Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>