force-app/main/default/objects/Support_Request__c/fields/SR_Created_By__c.field-meta.xml
<CustomField>
    <fullName>SR_Created_By__c</fullName>
    <formula>If(Submitted_By__r.Id = $User.Id, &quot;true&quot;, &quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR Created By</label>
    <type>Text</type>
</CustomField>