force-app/main/default/objects/Support_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>In User Validation</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Waiting for User Response</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Added to a Release</fullName>
            </value>
            <value>
                <fullName>Release Note Pending</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Handled by the Vendor</fullName>
            </value>
            <value>
                <fullName>Added to a Project</fullName>
            </value>
            <value>
                <fullName>Deployment Failed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Parking Lot</fullName>
            </value>
            <value>
                <fullName>Ready for Staging</fullName>
            </value>
            <value>
                <fullName>Merged to Deployment Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>