force-app/main/default/objects/Support_Request__c/fields/Status_Order__c.field-meta.xml
<CustomField>
    <fullName>Status_Order__c</fullName>
    <formula>CASE(Status__c,
&#39;Accepted&#39;,1,
&#39;Waiting for User Response&#39;, 2,
&#39;In User Validation&#39;, 3,
&#39;In Development&#39;, 4, 
5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>