force-app/main/default/objects/Support_Request__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>