force-app/main/default/objects/Support_Request__c/fields/Support_Request__c.field-meta.xml
<CustomField>
    <fullName>Support_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Support Request</label>
    <referenceTo>Support_Request__c</referenceTo>
    <relationshipName>Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>