force-app/main/default/objects/Support_Request__c/fields/Support_Request_For__c.field-meta.xml
<CustomField>
    <fullName>Support_Request_For__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOFE</fullName>
            </value>
            <value>
                <fullName>WCA</fullName>
            </value>
            <value>
                <fullName>CASHIERING</fullName>
            </value>
            <value>
                <fullName>PAGA</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>OIS</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
            <value>
                <fullName>REGISTRATION</fullName>
            </value>
            <value>
                <fullName>RCI</fullName>
            </value>
            <value>
                <fullName>PWCR</fullName>
            </value>
            <value>
                <fullName>ACCOUNTING</fullName>
            </value>
            <value>
                <fullName>MULTIPLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>