force-app/main/default/objects/Support_Request__c/fields/Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Test_Result__c</fullName>
    <formula>IMAGE( 
CASE(Status__c, 
&quot;Accepted&quot;,  &quot;https://cadir--c.na21.content.force.com/servlet/servlet.FileDownload?file=015t0000000LUk8&quot;,
&quot;Added to a Release&quot;,  &quot;https://cadir--c.na21.content.force.com/servlet/servlet.FileDownload?file=015t0000000LUk8&quot;,
&quot;/s.gif&quot;),
&quot;Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Result</label>
    <type>Text</type>
</CustomField>