force-app/main/default/objects/Support_Request__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <inlineHelpText>If you worked less than one hour, you may put in decimal, e.g .25</inlineHelpText>
    <label>Estimated Hours Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>